[tool.poetry]
name = "ticketline"
version = "0.1.0"
description = ""
authors = ["José Duarte <duarte.gmj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.2"
httpx = "^0.25.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
